src/negative_test_cases/Testcases/incorrect_boolean_operator.stl
void main(){

boolean a = 5 <> 6;

}
